salesforce_sfdx/main/default/objects/Application_Task__c/fields/Post_Inspection_Cure_Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Post_Inspection_Cure_Review_Result__c</fullName>
    <label>Post-Inspection Cure Review Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Cure</fullName>
            </value>
            <value>
                <fullName>Flag</fullName>
            </value>
            <value>
                <fullName>Discrepancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>