salesforce_sfdx/main/default/objects/Application_Task__c/fields/Post_Inspection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_Inspection_Notes__c</fullName>
    <label>Post Inspection Notes</label>
    <type>TextArea</type>
</CustomField>