salesforce_sfdx/main/default/objects/Application_Task__c/fields/Post_Inspection_Peer_Review_Complete_Dat__c.field-meta.xml
<CustomField>
    <fullName>Post_Inspection_Peer_Review_Complete_Dat__c</fullName>
    <label>Post Inspection Peer Review Completed</label>
    <type>Date</type>
</CustomField>