salesforce_sfdx/main/default/objects/Application_Task__c/fields/Post_Inspection_Peer_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Post_Inspection_Peer_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Inspection Peer Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Tasks9</relationshipName>
    <type>Lookup</type>
</CustomField>