salesforce_sfdx/main/default/objects/Application_Task__c/fields/PPE_Requirements__c.field-meta.xml
<CustomField>
    <fullName>PPE_Requirements__c</fullName>
    <label>PPE Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foot Protection</fullName>
            </value>
            <value>
                <fullName>Head Protection</fullName>
            </value>
            <value>
                <fullName>Eye &amp; Face Protection</fullName>
            </value>
            <value>
                <fullName>Hearing Protection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>