salesforce_sfdx/main/default/objects/Application_Task__c/fields/Pre_Inspection_Cure_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Inspection_Cure_Assignment_Date__c</fullName>
    <label>Pre-Inspection Cure Assignment Date</label>
    <type>Date</type>
</CustomField>