salesforce_sfdx/main/default/objects/Application_Task__c/fields/Pre_Inspection_Cure_Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Pre_Inspection_Cure_Review_Result__c</fullName>
    <label>Pre-Inspection Cure Review Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Cure</fullName>
            </value>
            <value>
                <fullName>Flag</fullName>
            </value>
            <value>
                <fullName>DF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>