salesforce_sfdx/main/default/objects/Application_Task__c/fields/Pre_Inspection_Cure_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Pre_Inspection_Cure_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Inspection Cure Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Tasks3</relationshipName>
    <type>Lookup</type>
</CustomField>