salesforce_sfdx/main/default/objects/Application_Task__c/fields/Pre_Inspection_Peer_Review_Assignment_Da__c.field-meta.xml
<CustomField>
    <fullName>Pre_Inspection_Peer_Review_Assignment_Da__c</fullName>
    <label>Pre Inspection Peer Review Assign Date</label>
    <type>Date</type>
</CustomField>