salesforce_sfdx/main/default/objects/Application_Task__c/fields/Pre_Inspection_Peer_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Pre_Inspection_Peer_Reviewer__c</fullName>
    <label>Pre Inspection Peer Reviewer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>