salesforce_sfdx/main/default/objects/Application_Task__c/fields/Primary_Application_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Application_Contact_Name__c</fullName>
    <formula>Application__r.vlocity_cmt__AccountId__r.vlocity_cmt__PrimaryContactId__r.FirstName &amp; ' ' &amp;  Application__r.vlocity_cmt__AccountId__r.vlocity_cmt__PrimaryContactId__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Project Contact Name</label>
    <type>Text</type>
</CustomField>