salesforce_sfdx/main/default/objects/Application_Task__c/fields/Primary_Application_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Application_Contact_Phone_Number__c</fullName>
    <formula>Application__r.vlocity_cmt__AccountId__r.vlocity_cmt__PrimaryContactId__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Project Contact Phone Number</label>
    <type>Text</type>
</CustomField>