salesforce_sfdx/main/default/objects/Application_Task__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <formula>Application__r.Project_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>