salesforce_sfdx/main/default/objects/Application_Task__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF(
    ISBLANK(Rating_Input__c),
    NULL,
    IMAGE(
        "/img/samples/stars_" + Rating_Input__c + "00.gif",
        "Rating Level"
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>