salesforce_sfdx/main/default/objects/Application_Task__c/fields/RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <description>drives trigger to set RecordType from devname</description>
    <label>RecordTypeDeveloperName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>