salesforce_sfdx/main/default/objects/Application_Task__c/fields/Review_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Completion_Date__c</fullName>
    <label>Review Completion Date</label>
    <type>Date</type>
</CustomField>