salesforce_sfdx/main/default/objects/Application_Task__c/fields/Revised_Expected_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Expected_Project_End_Date__c</fullName>
    <formula>Application__r.Revised_Expected_Project_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised Expected Project End Date</label>
    <type>Date</type>
</CustomField>