salesforce_sfdx/main/default/objects/Application_Task__c/fields/Revision_Notes_CP__c.field-meta.xml
<CustomField>
    <fullName>Revision_Notes_CP__c</fullName>
    <label>Revision Notes - CP</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>