salesforce_sfdx/main/default/objects/Application_Task__c/fields/Revision_Notes_MV__c.field-meta.xml
<CustomField>
    <fullName>Revision_Notes_MV__c</fullName>
    <inlineHelpText>Details of the revision, discussions with the M&amp;V Contractor about completing the revision. If revision is complete then include file name for the revised deliverable.</inlineHelpText>
    <label>Revision Notes - M&amp;V</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>