salesforce_sfdx/main/default/objects/Application_Task__c/fields/Revision_to_Deliverable_CP__c.field-meta.xml
<CustomField>
    <fullName>Revision_to_Deliverable_CP__c</fullName>
    <label>Revision to Deliverable - CP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>