salesforce_sfdx/main/default/objects/Application_Task__c/fields/Savings_After_QAQC_Stage__c.field-meta.xml
<CustomField>
    <fullName>Savings_After_QAQC_Stage__c</fullName>
    <label>Savings After QAQC Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>