salesforce_sfdx/main/default/objects/Application_Task__c/fields/Savings_Before_QAQC_Stage__c.field-meta.xml
<CustomField>
    <fullName>Savings_Before_QAQC_Stage__c</fullName>
    <label>Savings Before QAQC Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>