salesforce_sfdx/main/default/objects/Application_Task__c/fields/Scheduled_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_and_Time__c</fullName>
    <label>Scheduled Date and Time</label>
    <type>DateTime</type>
</CustomField>