salesforce_sfdx/main/default/objects/Application_Task__c/fields/Scheduled_Pre_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Pre_Inspection_Date__c</fullName>
    <label>Scheduled Pre Inspection Date</label>
    <type>Date</type>
</CustomField>