salesforce_sfdx/main/default/objects/Application_Task__c/fields/SEP_Account__c.field-meta.xml
<CustomField>
    <fullName>SEP_Account__c</fullName>
    <formula>Application__r.vlocity_cmt__AccountId__r.Strategic_Energy_Partnership__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEP Account</label>
    <type>Text</type>
</CustomField>