salesforce_sfdx/main/default/objects/Application_Task__c/fields/Service_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_City__c</fullName>
    <formula>Application__r.vlocity_cmt__AccountId__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Address City</label>
    <type>Text</type>
</CustomField>