salesforce_sfdx/main/default/objects/Application_Task__c/fields/Service_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Street_Address__c</fullName>
    <formula>Application__r.vlocity_cmt__AccountId__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Street Address</label>
    <type>Text</type>
</CustomField>