salesforce_sfdx/main/default/objects/Application_Task__c/fields/SOW_Change_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_Change_Assignment_Date__c</fullName>
    <label>SOW Change Assignment Date</label>
    <type>Date</type>
</CustomField>