salesforce_sfdx/main/default/objects/Application_Task__c/fields/SOW_Change_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>SOW_Change_Incentive_Amount__c</fullName>
    <label>SOW Change Incentive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>