salesforce_sfdx/main/default/objects/Application_Task__c/fields/SOW_Change_KWh_Savings__c.field-meta.xml
<CustomField>
    <fullName>SOW_Change_KWh_Savings__c</fullName>
    <label>SOW Change KWh Savings</label>
    <length>30</length>
    <type>Text</type>
</CustomField>