salesforce_sfdx/main/default/objects/Application_Task__c/fields/SOW_Change_Lifetime_Savings_LMMBTU__c.field-meta.xml
<CustomField>
    <fullName>SOW_Change_Lifetime_Savings_LMMBTU__c</fullName>
    <label>SOW Change Lifetime Savings (LMMBTU)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>