salesforce_sfdx/main/default/objects/Application_Task__c/fields/SOW_Change_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>SOW_Change_Review_Notes__c</fullName>
    <label>SOW Change Review Notes</label>
    <type>TextArea</type>
</CustomField>