salesforce_sfdx/main/default/objects/Application_Task__c/fields/SOW_Change_Steam_Savings_Mlbs__c.field-meta.xml
<CustomField>
    <fullName>SOW_Change_Steam_Savings_Mlbs__c</fullName>
    <label>SOW Change Steam Savings (Mlbs)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>