salesforce_sfdx/main/default/objects/Application_Task__c/fields/Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating__c</fullName>
    <label>Star Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐⭐⭐</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>