salesforce_sfdx/main/default/objects/Application_Task__c/fields/Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Task_Description__c</fullName>
    <label>Task Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>