salesforce_sfdx/main/default/objects/Application_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Type</label>
    <type>Text</type>
</CustomField>