salesforce_sfdx/main/default/objects/Application_Task__c/fields/Therm_Annualized_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Therm_Annualized_Consumption__c</fullName>
    <formula>Application__r.vlocity_cmt__AccountId__r.Therm_Annualized_Consumption__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Therm Annualized Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>