salesforce_sfdx/main/default/objects/Application_Task__c/fields/Urgent_Project__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Project__c</fullName>
    <formula>Application__r.Urgent_Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Urgent Project</label>
    <type>Checkbox</type>
</CustomField>