salesforce_sfdx/main/default/objects/Application_Task__c/fields/Work_Description__c.field-meta.xml
<CustomField>
    <fullName>Work_Description__c</fullName>
    <label>Work Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>