salesforce_sfdx/main/default/objects/Application_Task__c/fields/X3rd_Party_Pre_Inspection_Cure_Complete__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Pre_Inspection_Cure_Complete__c</fullName>
    <label>3rd Party Pre-Inspection Cure Complete</label>
    <type>Date</type>
</CustomField>