salesforce_sfdx/main/default/objects/Application_Task__c/fields/X3rd_Party_SOW_Change_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_SOW_Change_Complete_Date__c</fullName>
    <label>3rd Party SOW Change Complete Date</label>
    <type>Date</type>
</CustomField>