salesforce_sfdx/main/default/objects/Application_Task__c/fields/X3rd_Party_Technical_Review_Complete_Dat__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Technical_Review_Complete_Dat__c</fullName>
    <label>3rd Party Technical Review Complete Date</label>
    <type>Date</type>
</CustomField>