salesforce_sfdx/main/default/objects/Application_Task__c/listViews/Inspections_Team_Queue_Application_Task.listView-meta.xml
<ListView>
    <fullName>Inspections_Team_Queue_Application_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Inspections Team Queue</label>
    <queue>Inspections_Team_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>